# tree-sitter-nuon

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  env.nu  go.mod  grammar+.js  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-nuon.pc.in
bindings/c/tree_sitter/: tree-sitter-nuon.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nuon/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNuonTests/: TreeSitterNuonTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: main.txt  nu_sample.txt
test/highlight/: basic.nuon  table.nuon
